# pulsemoon

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: app.rs  config.rs  event.rs  main.rs  theme.rs  types.rs
src/collectors/: mod.rs  process.rs  system.rs
src/collectors/gpu/: amd.rs  apple.rs  intel.rs  mod.rs  nvidia.rs
src/collectors/ports/: linux.rs  macos.rs  mod.rs  windows.rs
src/ui/: command_palette.rs  cpu_detail.rs  dashboard.rs  disk_detail.rs  gpu_detail.rs  help.rs  memory_detail.rs  mod.rs  port_table.rs  process_table.rs
